hphp/hack/test/typecheck/collection_unexpected_arrow_set_legacy.php
<?hh

function test(): void {
  // Using key => value in a value-only collection (Set)
  $x = Set {'key' => 'value'};
}
